# Secure-File-Management-System

./: .gitignore  App.py  README.md  __init__.py  malware_scanner.py  pyproject.toml  shared.py  virustotal_scanner.py
pages/: __init__.py  auth.py  dashboard.py  settings.py  shared.py  upload.py
src/: __init__.py
src/auth/: __init__.py  auth_manager.py  password_manager.py  two_factor.py
src/database/: __init__.py  connection.py  models.py
src/file_ops/: __init__.py  file_manager.py
src/threat_detection/: virustotal_scanner.py
src/utils/: __init__.py  encryption.py  logger.py  validators.py
