[project]
name = "secure-file-managment-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
    "pandas>=2.3.3",
    "pymongo>=4.15.4",
    "pyotp>=2.9.0",
    "humanize>=4.14.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "qrcode>=8.2",
]
